# SonarNet

./: README.md  converter.py  evaluate.py  inference.py  test.py  tester.py  train.py  unet_node.py  validation_node.py  vis_weights.py
model/: __init__.py  sonarnet.py
utils/: data_loading.py
utils/cfar/: CFAR.py  CMakeLists.txt  cfar.py
